service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datapower-svc
  namespace: integration
spec:
  selector:
    app: "datapower"
  type: NodePort
  ports:
    - port: 9090
      name: webgui
      protocol: TCP
      targetPort: 9090
    - port: 5554
      name: restmgmt
      protocol: TCP
      targetPort: 5554
    - port: 8443
      name: api
      protocol: TCP
      targetPort: 8443
    - port: 443
      name: fsph
      protocol: TCP
      targetPort: 443
    - port: 8000
      name: portbase
      protocol: TCP
      targetPort: 8000
    - port: 8001
      name: portbase-1
      protocol: TCP
      targetPort: 8001
